# transcribe-script

./: .gitignore  README.md  pyproject.toml  transcribe.py  transcription_sprint227-ふりかえり.txt
