[project]
name = "transcribe-script"
version = "0.1.0"
description = ""
authors = [
    {name = "ma-kaneko",email = "ma-kaneko@kddi-agile.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "whisper (>=1.1.10,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
